2.3/yaml/step1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesson8
  template:
    metadata:
      labels:
        app: lesson8
    spec:
      containers:
      - name: lesson8-nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - name:  index
            mountPath:  /usr/share/nginx/html/index.html
            subPath: index.html
        ports:
        - containerPort: 80
      - name: lesson8-multitool
        image: wbitt/network-multitool
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name:  index
        configMap:
          name: lesson8-config
          items:
          - key: index.html
            path: index.html
