2.3/yaml/step1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson8-ingress
  namespace: lesson8
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: ingress-k8s.midnas.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lesson8-svc
            port:
              number: 80
      - path: /tool
        pathType: Exact
        backend:
          service:
            name: lesson8-svc
            port:
              number: 8080
